# Adaptive-quadrature

./: CMakeLists.txt  README.md  aquad1.c  aquad2.c  aquad3-version2.c  runs.txt
